--- a/gradle.properties
+++ b/gradle.properties
@@ -12,8 +12,8 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Thu Jun 08 11:13:59 GMT-04:00 2017
-#systemProp.http.proxyHost=127.0.0.1
-#systemProp.https.proxyPort=8080
-#systemProp.https.proxyHost=127.0.0.1
-#systemProp.http.proxyPort=8080
+#Thu Aug 31 20:49:08 GMT-04:00 2017
+systemProp.https.proxyPort=8080
+systemProp.http.proxyHost=127.0.0.1
+systemProp.https.proxyHost=127.0.0.1
+systemProp.http.proxyPort=8080
